Changes to Version 3.0-4

  o Scoping improvements to deltaMethod(), which now also takes an optional hypothesized value; contribution and suggestion by Pavel Krivitsky.
  
  o Small improvements.


Changes to Version 3.0-3

  o Fixed a bug in mmp.glm, so the horizontal axis for the default plot is the linear predictor, not the fitted values.  

  o Fixed a bug in estimatePower.bncPowerlmer when the shift parameter is too close to the lower bound, thanks to Wouter van der Bijl <wouter@zoology.ubc.ca>
  
  o Fixed a bug in brief.lm the caused an error with rank-deficient models.
  
  o Fixed a bug in deltaMethod() when a variable in the model is named "g" (reported by Chris Andrews.)
  
  o Added a title argument to mcPlots
  
  o influence.merMod() and influence.lme() now support parallel computations.

  o Fix a bug in gamLine() to return values in the response scale, rather than the linear predictor scale, for glms.
  
  o Fixed a bug that caused the error argument to be ignored in Anova() for type-III tests in linear models (reported by Austin Hurst).
  
  o New lmerMod method for influencePlot(), infIndexPlot(), and outlierTest().
  
  o Made scatterplot.formula() more robust.
  
  o Fixed qqPlot() to respect order of factor levels when plotting by groups (suggestion of Vilmantas Gegzna).
  
  o Fixed bug in S.multinom() that exponentiated coefficients twice (reported by Thamron Keowmani).
  
  o Made several S() methods tolerant of models with just one coefficient or, for multinom model, 2 response levels (problem reported for S.polr() by Thamron Keowmani).
  
  o Added carHexsticker().
  
  o Updated CITATION file.
  
  o Small corrections.
  
Changes to Version 3.0-2

  o Include unexported copy of rather than import utils::askYesNo(), which doesn't exist before R 3.5.0. To be reversed in car 3.0-3 which will require R >= 3.5.0
  